css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 660px;
    min-height: 680px;
    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    height: 125px;
    width: 125px;
    background: #2e3d49;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
}

.deck .card.open {
    transform: rotateY(0);
    background: #02b3e4;
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
}

.deck .card.match {
    cursor: default;
    background: #02ccba;
    font-size: 33px;
}

/*
 * Styles for the Score Panel
 */

.score-panel {
    text-align: left;
    /* width: 345px; */
    width: 600px;
    margin-bottom: 10px;

    /*  My code */
    display: flex;
}

.stars-moves {
    flex-grow: 1;
}

/* My addition */
.score-panel #timer{
    display: inline-block;
    font-size: 23px;
    padding-right: .5em;
}

.score-panel .stars {
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0;
    /* My addition; otherwise black */
    color: gold;
    flex-grow: 1;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
}

.score-panel .restart {
    /* float: right; */
    /* display: flex; */
    flex-grow: 1;
    align-items: flex-end;
    cursor: pointer;
}

.score-panel .restart .fa-repeat {
    float: right;
}

#pause #continue {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 1em;
    display: inline-block;
    /* float: right; */
}

.modal {
    visibility: hidden;
    /* display: inline; */
    display: flex;
    width: 660px;
    height: 680px;
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0;
    align-items: center;
    margin: 0 0 3em; 

}

.modal h1 {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 3em;
    text-align: center;
}

